--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ const questions = [
 /* 40 */ {q:"この標識のあるところでは，自動車は停止してはならない。",img:"images/q40.png",a:false,e:"「停車可」です。車は、停車することができます。。"},
 /* 41 */ {q:"この標識は、駐車禁止を示している。",img:"images/q41.png",a:false,e:"「駐車可」です。車は、駐車することができます。"},
 /* 42 */ {q:"この標識は、標章の交付受けた高齢運転者等が運転する普通自動車が標章を掲示することで停車できることを示している。",img:"images/q42.png",a:true,e:"問題文の通りです。「高齢運転者等標章自動車停車可」です。"},
-/* 43 */ {q:"この図は、聴覚に障害がある運転者が、準中型自動車または普通自動車を運転するときに付けるマークである。",img:"images/q43.png",a:true,e:"問題文の通りです。「聴覚障害者標識」です。"},
+/* 43 */ {q:"この標識は、原動機付自転車の右折が禁止されていることを示している。",img:"images/q43.png",a:false,e:"右折禁止では無く、原動機付自転車の二段階右折が禁止されていることを示しています。"},
 /* 44 */ {q:"この標識がある道路では普通乗用自動車のみが軌道敷内を通行することができる。",img:"images/q44.png",a:false,e:"補助標識で「普通乗用自動車のみ」と指定されていなければ、基本的に自動車全般が通行可能です。"},
 /* 45 */ {q:"交差点の手前にこの標識がある場合は、自分の通行している道路が「優先道路」であることを示している。",img:"images/q45.png",a:true,e:"問題文の通りです。"},
 /* 46 */ {q:"この標識は、この先の道路の道幅が狭くなっていることを示している。",img:"images/q46.png",a:true,e:"問題文の通りです。「幅員減少」です。"},
@@ -194,6 +194,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
