--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ const questions = [
 /* 37 */ {q:"この標識は、すべりやすいので注意しなければならないことを示している。",img:"images/q37.png",a:false,e:"「右（左）つづら折りあり」です。山道などでよく見られるような、右方向（左方向）への急なカーブが連続して続く「ジグザグ道」になっていることを示す標識です。この標識を見たら、連続するカーブに備えて速度を落とし、慎重にハンドル操作をする必要があります。"},
 /* 38 */ {q:"これは高齢者マークであり、７０歳以上の高齢運転者は、普通自動車を運転する場合、その車の前と後ろの定められた位置につけるようにした方がよい。",img:"images/q38.png",a:true,e:"問題文の通りです。"},
 /* 39 */ {q:"これは聴覚に障害のある運転者が、準中型自動車または普通自動車を運転するときに付けるマークである。",img:"images/q39.png",a:true,e:"問題文の通りです。「聴覚障がい者標識」です。"},
-/* 40 */ {q:"この標識のあるところでは，自動車は停止してはならない。",img:"images/q40.png",a:false,e:"「停車可」です。車は、停車することができます。。"},
+/* 40 */ {q:"この標識は路線バスの停留所を示している。",img:"images/q40.png",a:false,e:"「停車可」です。車は、ここで停車することができます。路線バスの停留所ではありません。"},
 /* 41 */ {q:"この標識は、駐車禁止を示している。",img:"images/q41.png",a:false,e:"「駐車可」です。車は、駐車することができます。"},
 /* 42 */ {q:"この標識は、標章の交付を受けた高齢運転者等が運転する普通自動車が標章を掲示することで停車できることを示している。",img:"images/q42.png",a:true,e:"問題文の通りです。「高齢運転者等標章自動車停車可」です。"},
 /* 43 */ {q:"この標識は、原動機付自転車の右折が禁止されていることを示している。",img:"images/q43.png",a:false,e:"右折禁止では無く、原動機付自転車の二段階右折が禁止されていることを示しています。"},
@@ -194,6 +194,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
