--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@ let score = 0;
 let wrongList = [];
 
 const questions = [
-/* 1 */ {q:"この標識は、車は通行できないが、歩行者は通行できることを示している。",img:"images/q1.png",a:false,e:"歩行者、遠隔操作小型車、車、路面電車のすべてが通行できません。"},
-/* 2 */ {q:"この標識は、自動車はもちろん、原動機自動車や軽車両も通行できない。",img:"images/q2.png",a:true,e:"問題文の通りです。"},
-/* 3 */ {q:"この標識は、車両進入禁止で、標識のある方向からは進入できない。",img:"images/q3.png",a:true,e:"問題文の通りです。"},
+/* 1 */ {q:"この標識は、車は通行できないが、歩行者は通行できることを示している。",img:"images/q1.png",a:false,e:"これは「通行止め」の標識です。歩行者、遠隔操作小型車、車、路面電車のすべてが通行できません。"},
+/* 2 */ {q:"この標識は、自動車はもちろん、原動機自動車や軽車両も通行できない。",img:"images/q2.png",a:true,e:"問題文の通りです。「車両通行止め」の標識」です。"},
+/* 3 */ {q:"この標識は、車両進入禁止で、標識のある方向からは進入できない。",img:"images/q3.png",a:true,e:"問題文の通りです。「車両進入禁止の標識です。"},
 /* 4 */ {q:"この標識のある交差点で右折する原動機付自転車は、右折するところまで進行する間、右折の合図をしなくてもよい。",img:"images/q4.png",a:false,e:"交差点の30ｍ手前から、右に向きを変えるところまで、右折の合図をします。"},
-/* 5 */ {q:"この標識のある場所では、8時から２０時までの間、駐車が禁止されていることを示している。",img:"images/q5.png",a:true,e:"問題文の通りです。"},
-/* 6 */ {q:"この標識のある場所では、道路の幅が６メートルなければ駐車してはならないことを示している。",img:"images/q6.png",a:false,e:"道路自体の幅が6メートルなければいけない、という意味ではなく。車の右側に６メートルの余地がなければ駐車できないという意味です。"},
-/* 7 */ {q:"この標識のあるところでは、右折することができない",img:"images/q7.png",a:false,e:"「車両横断禁止」です。右折はできます。"},
-/* 8 */ {q:"この標識のあるところでは、同時に後退も禁止されている。",img:"images/q8.png",a:false,e:"「転回禁止」です。後退はできます。"},
+/* 5 */ {q:"この標識のある場所では、8時から２０時までの間、駐車が禁止されていることを示している。",img:"images/q5.png",a:true,e:"問題文の通りです。「駐車禁止」の標識です。"},
+/* 6 */ {q:"この標識のある場所では、道路の幅が６メートルなければ駐車してはならないことを示している。",img:"images/q6.png",a:false,e:"これは「駐車余地」の標識です。道路自体の幅が6メートルなければいけない、という意味ではなく。車の右側に６メートルの余地がなければ駐車できないという意味です。"},
+/* 7 */ {q:"この標識のあるところでは、右折することができない",img:"images/q7.png",a:false,e:"これは「車両横断禁止」の標識です。右折はできます。"},
+/* 8 */ {q:"この標識のあるところでは、同時に後退も禁止されている。",img:"images/q8.png",a:false,e:"これは「転回禁止」の標識です。後退はできます。"},
 /* 9 */ {q:"この表示は、前方に交差点があることを示している。",img:"images/q9.png",a:false,e:"「横断歩道または自転車横断帯あり」です。"},
 /*10 */ {q:"この▽印の表示がある方が、前方の交差する道路より優先道路である。",img:"images/q10.png",a:false,e:"▽印の表示がない方が優先道路です。▽印の表示がある方を通行している車は、交差点の状況に応じて、他の車両や歩行者に注意し、安全な速度と方法で走行する義務があります。 優先道路を走行するときでも、周囲の状況を確認して、必要に応じて徐行や一時停止をしましょう。"},
 
@@ -194,6 +194,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
