--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@ const questions = [
 /* 13 */ {q:"この標識のある道路では、運転経歴にかかわらず、大型自動二輪車及び普通自動二輪車での、二人乗り通行を禁止している。",img:"images/q13.png",a:true,e:"問題文の通りです。「大型自動二輪車及び普通自動二輪車二人乗り通行禁止」の標識です。"},
 /* 14 */ {q:"この標識は、路線バス等の優先通行帯を示すもので、路線バスが近づいたときは、ほかの自動車は速やかにその通行帯から出なければならない。",img:"images/q14.png",a:true,e:"問題文の通りです。「路線バス等優先通行帯」の標識です。"},
 /* 15 */ {q:"この標識のある通行帯では、指定された車以外の車（小型特殊自動車、原動機付自転車、軽車両を除く）は左折や工事などでやむを得ない場合のほかは通行することができない。",img:"images/q15.png",a:true,e:"問題文の通りです。「専用通行帯」の標識です。"},
-/* 16 */ {q:"この標識は、歩行車だけの通行のために設けられた道路を示している。",img:"images/q16.png",a:true,e:"問題文の通りです。「歩行者専用道路」です。"},
-/* 17 */ {q:"この標識のあるところでは、特例特定小型原動機付自転車は通行することができる。",img:"images/q17.png",a:true,e:"問題文の通りです。「普通自転車及び歩行者等専用」です。1.自転車歩行者専用道路を示します。2.特定小型原動機付自転車及び自転車（これらの車両で自転車道を通行してはならないものを除く。）以外の車両は通行できません。3.特例特定小型原動機付自転車と普通自転車が通行できる歩道であることを示しています。"},
-/* 18 */ {q:"この標識は、車が直進や左折することはできるが、午前８時から午後８時までの間、右折することができないことを示している。",img:"images/q18.png",a:true,e:"問題文の通りです。"},
-/* 19 */ {q:"この標識は、普通乗用自動車だけの通行を禁止している。",img:"images/q19.png",a:false,e:"「二輪の自動車以外の自動車通行止め」です。二輪の自動車のみ通行できます。"},
+/* 16 */ {q:"この標識は、歩行車だけの通行のために設けられた道路を示している。",img:"images/q16.png",a:true,e:"問題文の通りです。「歩行者専用道路」の標識です。。"},
+/* 17 */ {q:"この標識のあるところでは、特例特定小型原動機付自転車は通行することができる。",img:"images/q17.png",a:true,e:"問題文の通りです。「普通自転車及び歩行者等専用」の標識です。1.自転車歩行者専用道路を示します。2.特定小型原動機付自転車及び自転車（これらの車両で自転車道を通行してはならないものを除く。）以外の車両は通行できません。3.特例特定小型原動機付自転車と普通自転車が通行できる歩道であることを示しています。"},
+/* 18 */ {q:"この標識は、車が直進や左折することはできるが、午前８時から午後８時までの間、右折することができないことを示している。",img:"images/q18.png",a:true,e:"問題文の通りです。『指定方向外進行禁止」の標識です。  "},
+/* 19 */ {q:"この標識は、普通乗用自動車だけの通行を禁止している。",img:"images/q19.png",a:false,e:"これは「二輪の自動車以外の自動車通行止め」の標識です。二輪の自動車のみ通行できます。"},
 /* 20 */ {q:"この標識のあるところでは、最大積載量2.000キログラムの貨物自動車は通行してもよい。",img:"images/q20.png",a:true,e:"問題文の通りです。大型貨物自動車と特定中型貨物自動車、大型特殊自動車は通行できません。最大積載量2.000キログラムの貨物自動車は通行できます。"},
 /* 21 */ {q:"この標識のあるところでは、車両総重量3.000キログラムの貨物自動車は通行できないことを示している。",img:"images/q21.png",a:false,e:"「特定の最大積載量以上の貨物自動車等通行止め」です。この場合最大積載量3.000キログラム以上の貨物自動車と大型特殊自動車は通行できません。"},
 /* 22 */ {q:"この表示は、立ち入り禁止部分であることを示している。",img:"images/q22.png",a:true,e:"問題文の通りです。"},
@@ -194,6 +194,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
