--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@ const questions = [
 /* 17 */ {q:"この標識のあるところでは、特例特定小型原動機付自転車は通行することができる。",img:"images/q17.png",a:true,e:"問題文の通りです。「普通自転車及び歩行者等専用」の標識です。1.自転車歩行者専用道路を示します。2.特定小型原動機付自転車及び自転車（これらの車両で自転車道を通行してはならないものを除く。）以外の車両は通行できません。3.特例特定小型原動機付自転車と普通自転車が通行できる歩道であることを示しています。"},
 /* 18 */ {q:"この標識は、車が直進や左折することはできるが、午前８時から午後８時までの間、右折することができないことを示している。",img:"images/q18.png",a:true,e:"問題文の通りです。『指定方向外進行禁止」の標識です。  "},
 /* 19 */ {q:"この標識は、普通乗用自動車だけの通行を禁止している。",img:"images/q19.png",a:false,e:"これは「二輪の自動車以外の自動車通行止め」の標識です。二輪の自動車のみ通行できます。"},
-/* 20 */ {q:"この標識のあるところでは、最大積載量2.000キログラムの貨物自動車は通行してもよい。",img:"images/q20.png",a:true,e:"問題文の通りです。大型貨物自動車と特定中型貨物自動車、大型特殊自動車は通行できません。最大積載量2.000キログラムの貨物自動車は通行できます。"},
-/* 21 */ {q:"この標識のあるところでは、車両総重量3.000キログラムの貨物自動車は通行できないことを示している。",img:"images/q21.png",a:false,e:"「特定の最大積載量以上の貨物自動車等通行止め」です。この場合最大積載量3.000キログラム以上の貨物自動車と大型特殊自動車は通行できません。"},
-/* 22 */ {q:"この表示は、立ち入り禁止部分であることを示している。",img:"images/q22.png",a:true,e:"問題文の通りです。"},
+/* 20 */ {q:"この標識のあるところでは、最大積載量2.000キログラムの貨物自動車は通行してもよい。",img:"images/q20.png",a:true,e:"問題文の通りです。大型貨物自動車と特定中型貨物自動車、大型特殊自動車は通行できません。最大積載量2.000キログラムの貨物自動車は準中型自動車のため通行できます。"},
+/* 21 */ {q:"この標識のあるところでは、車両総重量3.000キログラムの貨物自動車は通行できないことを示している。",img:"images/q21.png",a:false,e:"「特定の最大積載量以上の貨物自動車等通行止め」の標識です。この場合最大積載量3.000キログラム以上の貨物自動車と大型特殊自動車は通行できません。車両総重量と最大積載量を混同しないよう、十分に注意しましょう。"},
+/* 22 */ {q:"この表示は、立ち入り禁止部分であることを示している。",img:"images/q22.png",a:true,e:"問題文の通りです。車はこの表示の中に入ってはいけません。"},
 /* 23 */ {q:"この表示は、停止禁止部分であることを示している。",img:"images/q23.png",a:true,e:"問題文の通りです。前方の状況により、この表示の中で停止するおそれがあるときは、この中に入ってはいけません。"},
-/* 24 */ {q:"この白の二本線で示された路側帯は、車はその中に入って駐車をしてもよい。",img:"images/q24.png",a:true,e:"「歩行者専用路側帯」なので、車の駐停車は禁止されています。"},
+/* 24 */ {q:"この白の二本線で示された路側帯は、車はその中に入って駐車をしてもよい。",img:"images/q24.png",a:true,e:"これは「歩行者専用路側帯」です。車の駐停車は禁止されています。"},
 /* 25 */ {q:"この表示の路側帯に入って、駐車や停車をすることはできない。",img:"images/q25.png",a:true,e:"問題文の通りです。「駐停車禁止路側帯」です。"},
 /* 26 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q26.png",a:true,e:"問題文の通りです。"},
 /* 27 */ {q:"この標識は、この先で左から道路が合流してくることを示している。",img:"images/q27.png",a:true,e:"問題文の通りです。"},
@@ -194,6 +194,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
