--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ const questions = [
 /* 23 */ {q:"この表示は、停止禁止部分であることを示している。",img:"images/q23.png",a:true,e:"問題文の通りです。前方の状況により、この表示の中で停止するおそれがあるときは、この中に入ってはいけません。"},
 /* 24 */ {q:"この白の二本線で示された路側帯は、車はその中に入って駐車をしてもよい。",img:"images/q24.png",a:true,e:"これは「歩行者専用路側帯」です。車の駐停車は禁止されています。"},
 /* 25 */ {q:"この表示の路側帯に入って、駐車や停車をすることはできない。",img:"images/q25.png",a:true,e:"問題文の通りです。「駐停車禁止路側帯」です。"},
-/* 26 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q26.png",a:true,e:"問題文の通りです。"},
+/* 26 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q26.png",a:true,e:"問題文の通りです。「その他の危険」ありの標識です。"},
 /* 27 */ {q:"この標識は、この先で左から道路が合流してくることを示している。",img:"images/q27.png",a:true,e:"問題文の通りです。"},
 /* 28 */ {q:"この表示は、道路中央寄り右側部分にはみ出して追い越すときは、対向車に注意しなければならないことを示している。",img:"images/q28.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」です。追い越しのため道路の右側部分にはみ出して通行してはいけません。"},
 /* 29 */ {q:"この標識は、自動車と原動機付自転車の最高速度が時速50キロメートルであることを示している。",img:"images/q29.png",a:false,e:"最高速度が50キロの標識でも、原動機付自転車は、時速30キロメートルを超えてはいけません。"},
@@ -194,6 +194,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
