--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@ const questions = [
 /* 24 */ {q:"この白の二本線で示された路側帯は、車はその中に入って駐車をしてもよい。",img:"images/q24.png",a:false,e:"これは「歩行者専用路側帯」です。車の駐停車は禁止されています。"},
 /* 25 */ {q:"この表示の路側帯に入って、駐車や停車をすることはできない。",img:"images/q25.png",a:true,e:"問題文の通りです。「駐停車禁止路側帯」です。"},
 /* 26 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q26.png",a:true,e:"問題文の通りです。「その他の危険」ありの標識です。"},
-/* 27 */ {q:"この標識は、この先で左から道路が合流してくることを示している。",img:"images/q27.png",a:true,e:"問題文の通りです。"},
-/* 28 */ {q:"この表示は、道路中央寄り右側部分にはみ出して追い越すときは、対向車に注意しなければならないことを示している。",img:"images/q28.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」です。追い越しのため道路の右側部分にはみ出して通行してはいけません。"},
-/* 29 */ {q:"この標識は、自動車と原動機付自転車の最高速度が時速50キロメートルであることを示している。",img:"images/q29.png",a:false,e:"最高速度が50キロの標識でも、原動機付自転車は、時速30キロメートルを超えてはいけません。"},
+/* 27 */ {q:"この標識は、この先で左から道路が合流してくることを示している。",img:"images/q27.png",a:true,e:"問題文の通りです。"「合流交通あり」の標識です。"},
+/* 28 */ {q:"この表示は、道路中央寄り右側部分にはみ出して追い越すときは、対向車に注意しなければならないことを示している。",img:"images/q28.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」の表示です。追い越しのため道路の右側部分にはみ出して通行してはいけません。"},
+/* 29 */ {q:"この標識は、自動車と原動機付自転車の最高速度が時速50キロメートルであることを示している。",img:"images/q29.png",a:false,e:"最高速度が50キロの標識でも、原動機付自転車は、時速30キロメートル（法定速度）を超えてはいけません。"},
 /* 30 */ {q:"この補助標識は、本標識が表示する交通規制の終わりを表している。",img:"images/q30.png",a:true,e:"問題文の通りです。「終わり」の補助標識です。"},
-/* 31 */ {q:"これは、左折可を示す標示板である。",img:"images/q31.png",a:false,e:"「一方通行」です。車は矢印の方向の示す反対方向には通行できません。"},
-/* 32 */ {q:"この標識があるときは、前方の信号が赤や黄であっても、周りの交通に注意しながら左折することができる。",img:"images/q32.png",a:true,e:"問題文の通りです。"},
-/* 33 */ {q:"この標識は、車は道路の右側部分にはみ出して追い越すことができる。",img:"images/q33.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」です。車は、道路の右側部分にはみ出して追い越しをしてはいけません。"},
-/* 34 */ {q:"この標識は、車は、一般原動機付自転車を追い越すため進路を変えたり、その横を通り過ぎたりしてはならない。",img:"images/q34.png",a:true,e:"問題文の通りです。「追い越し禁止」です。すべての追い越し行為が禁止されています。"},
-/* 35 */ {q:"この標識は、警音器を鳴らさなければならないことを示している。",img:"images/q35.png",a:true,e:"問題文の通りです。"},
+/* 31 */ {q:"これは、左折可を示す標示板である。",img:"images/q31.png",a:false,e:"「一方通行」の標識です。車は矢印の方向の示す反対方向には通行できません。"},
+/* 32 */ {q:"この標識があるときは、前方の信号が赤や黄であっても、周りの交通に注意しながら左折することができる。",img:"images/q32.png",a:true,e:"問題文の通りです。「左折可」の表示板です。"},
+/* 33 */ {q:"この標識は、車は道路の右側部分にはみ出して追い越すことができる。",img:"images/q33.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」の標識です。車は、道路の右側部分にはみ出して追い越しをしてはいけません。（はみ出さなければ追い越しできます。）"},
+/* 34 */ {q:"この標識は、車は、一般原動機付自転車を追い越すため進路を変えたり、その横を通り過ぎたりしてはならない。",img:"images/q34.png",a:true,e:"問題文の通りです。「追い越し禁止」の標識です。すべての追い越し行為が禁止されています。"},
+/* 35 */ {q:"この標識は、警音器を鳴らさなければならないことを示している。",img:"images/q35.png",a:true,e:"問題文の通りです。「警笛鳴らせ」の標識です。"},
 /* 36 */ {q:"この標識がある区間内の見通しがきかない交差点、曲がり角、上り坂の頂上付近では、警音器を鳴らす必要がある。",img:"images/q36.png",a:true,e:"問題文の通りです。「警笛区間」の標識です。"},
 /* 37 */ {q:"この標識は、すべりやすいので注意しなければならないことを示している。",img:"images/q37.png",a:false,e:"「右（左）つづら折りあり」です。山道などでよく見られるような、右方向（左方向）への急なカーブが連続して続く「ジグザグ道」になっていることを示す標識です。この標識を見たら、連続するカーブに備えて速度を落とし、慎重にハンドル操作をする必要があります。"},
 /* 38 */ {q:"これは高齢者マークであり、７０歳以上の高齢運転者は、普通自動車を運転する場合、その車の前と後ろの定められた位置につけるようにした方がよい。",img:"images/q38.png",a:true,e:"問題文の通りです。"},
@@ -194,6 +194,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
