--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@ const questions = [
 /* 33 */ {q:"この標識は、車は道路の右側部分にはみ出して追い越すことができる。",img:"images/q33.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」の標識です。車は、道路の右側部分にはみ出して追い越しをしてはいけません。（はみ出さなければ追い越しできます。）"},
 /* 34 */ {q:"この標識は、車は、一般原動機付自転車を追い越すため進路を変えたり、その横を通り過ぎたりしてはならない。",img:"images/q34.png",a:true,e:"問題文の通りです。「追い越し禁止」の標識です。すべての追い越し行為が禁止されています。"},
 /* 35 */ {q:"この標識は、警音器を鳴らさなければならないことを示している。",img:"images/q35.png",a:true,e:"問題文の通りです。「警笛鳴らせ」の標識です。"},
-/* 36 */ {q:"この標識がある区間内の見通しがきかない交差点、曲がり角、上り坂の頂上付近では、警音器を鳴らす必要がある。",img:"images/q36.png",a:true,e:"問題文の通りです。「警笛区間」の標識です。"},
-/* 37 */ {q:"この標識は、すべりやすいので注意しなければならないことを示している。",img:"images/q37.png",a:false,e:"「右（左）つづら折りあり」です。山道などでよく見られるような、右方向（左方向）への急なカーブが連続して続く「ジグザグ道」になっていることを示す標識です。この標識を見たら、連続するカーブに備えて速度を落とし、慎重にハンドル操作をする必要があります。"},
-/* 38 */ {q:"これは高齢者マークであり、７０歳以上の高齢運転者は、普通自動車を運転する場合、その車の前と後ろの定められた位置につけるようにした方がよい。",img:"images/q38.png",a:true,e:"問題文の通りです。"},
-/* 39 */ {q:"これは聴覚に障害のある運転者が、準中型自動車または普通自動車を運転するときに付けるマークである。",img:"images/q39.png",a:true,e:"問題文の通りです。「聴覚障がい者標識」です。"},
-/* 40 */ {q:"この標識は路線バスの停留所を示している。",img:"images/q40.png",a:false,e:"「停車可」です。車は、ここで停車することができます。路線バスの停留所ではありません。"},
-/* 41 */ {q:"この標識は、駐車禁止を示している。",img:"images/q41.png",a:false,e:"「駐車可」です。車は、駐車することができます。"},
-/* 42 */ {q:"この標識は、標章の交付を受けた高齢運転者等が運転する普通自動車が標章を掲示することで停車できることを示している。",img:"images/q42.png",a:true,e:"問題文の通りです。「高齢運転者等標章自動車停車可」です。"},
+/* 36 */ {q:"この標識がある区間内の見通しがきかない交差点、曲がり角、上り坂の頂上付近では、警音器を鳴らす必要がある。",img:"images/q36.png",a:true,e:"問題文の通りです。「警笛区間」の標識です。「警笛区間」では、その区間内のうち、左右の見通しがきかない交差点、見通しのきかない道路の曲がり角、見通しのきかない上り坂の頂上を通行するときに、警音器を鳴らすことが強制されます。しかし、それ以外の場所では、区間内であっても警音器を使用してはいけません。"},
+/* 37 */ {q:"この標識は、すべりやすいので注意しなければならないことを示している。",img:"images/q37.png",a:false,e:"「右（左）つづら折りあり」の標識です。山道などでよく見られるような、右方向（左方向）への急なカーブが連続して続く「ジグザグ道」になっていることを示す標識です。この標識を見たら、連続するカーブに備えて速度を落とし、慎重にハンドル操作をする必要があります。"},
+/* 38 */ {q:"これは高齢者マークであり、７０歳以上の高齢運転者は、普通自動車を運転する場合、その車の前と後ろの定められた位置につけるようにした方がよい。",img:"images/q38.png",a:true,e:"問題文の通りです。「高齢者マーク」です。"},
+/* 39 */ {q:"これは聴覚に障害のある運転者が、準中型自動車または普通自動車を運転するときに付けるマークである。",img:"images/q39.png",a:true,e:"問題文の通りです。「聴覚障がい者」標識です。"},
+/* 40 */ {q:"この標識は路線バスの停留所を示している。",img:"images/q40.png",a:false,e:"「停車可」の標識です。車は、ここで停車することができます。路線バスの停留所ではありません。"},
+/* 41 */ {q:"この標識は、駐車禁止を示している。",img:"images/q41.png",a:false,e:"「駐車可」の標識です。車は、駐車することができます。"},
+/* 42 */ {q:"この標識は、標章の交付を受けた高齢運転者等が運転する普通自動車が標章を掲示することで停車できることを示している。",img:"images/q42.png",a:true,e:"問題文の通りです。「高齢運転者等標章自動車停車可」標識です。"},
 /* 43 */ {q:"この標識は、原動機付自転車の右折が禁止されていることを示している。",img:"images/q43.png",a:false,e:"右折禁止では無く、原動機付自転車の二段階右折が禁止されていることを示しています。"},
 /* 44 */ {q:"この標識がある道路では普通乗用自動車のみが軌道敷内を通行することができる。",img:"images/q44.png",a:false,e:"補助標識で「普通乗用自動車のみ」と指定されていなければ、基本的に自動車全般が通行可能です。"},
 /* 45 */ {q:"交差点の手前にこの標識がある場合は、自分の通行している道路が「優先道路」であることを示している。",img:"images/q45.png",a:true,e:"問題文の通りです。"},
@@ -194,6 +194,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
