--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ let wrongList = [];
 const questions = [
 /* 1 */ {q:"この標識は、車は通行できないが、歩行者は通行できることを示している。",img:"images/q1.png",a:false,e:"これは「通行止め」の標識です。歩行者、遠隔操作小型車、車、路面電車のすべてが通行できません。"},
 /* 2 */ {q:"この標識は、自動車はもちろん、原動機自動車や軽車両も通行できない。",img:"images/q2.png",a:true,e:"問題文の通りです。「車両通行止め」の標識」です。"},
-/* 3 */ {q:"この標識は、車両進入禁止で、標識のある方向からは進入できない。",img:"images/q3.png",a:true,e:"問題文の通りです。「車両進入禁止の標識です。"},
+/* 3 */ {q:"この標識は、車両進入禁止で、標識のある方向からは進入できない。",img:"images/q3.png",a:true,e:"問題文の通りです。「車両進入禁止」の標識です。"},
 /* 4 */ {q:"この標識のある交差点で右折する原動機付自転車は、右折するところまで進行する間、右折の合図をしなくてもよい。",img:"images/q4.png",a:false,e:"交差点の30ｍ手前から、右に向きを変えるところまで、右折の合図をします。"},
 /* 5 */ {q:"この標識のある場所では、8時から２０時までの間、駐車が禁止されていることを示している。",img:"images/q5.png",a:true,e:"問題文の通りです。「駐車禁止」の標識です。"},
 /* 6 */ {q:"この標識のある場所では、道路の幅が６メートルなければ駐車してはならないことを示している。",img:"images/q6.png",a:false,e:"これは「駐車余地」の標識です。道路自体の幅が6メートルなければいけない、という意味ではなく。車の右側に６メートルの余地がなければ駐車できないという意味です。"},
@@ -87,7 +87,7 @@ const questions = [
 /* 24 */ {q:"この白の二本線で示された路側帯は、車はその中に入って駐車をしてもよい。",img:"images/q24.png",a:false,e:"これは「歩行者専用路側帯」です。車の駐停車は禁止されています。"},
 /* 25 */ {q:"この表示の路側帯に入って、駐車や停車をすることはできない。",img:"images/q25.png",a:true,e:"問題文の通りです。「駐停車禁止路側帯」です。"},
 /* 26 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q26.png",a:true,e:"問題文の通りです。「その他の危険」ありの標識です。"},
-/* 27 */ {q:"この標識は、この先で左から道路が合流してくることを示している。",img:"images/q27.png",a:true,e:"問題文の通りです。"「合流交通あり」の標識です。"},
+/* 27 */ {q:"この標識は、この先で左から道路が合流してくることを示している。",img:"images/q27.png",a:true,e:"問題文の通りです。「合流交通あり」の標識です。"},
 /* 28 */ {q:"この表示は、道路中央寄り右側部分にはみ出して追い越すときは、対向車に注意しなければならないことを示している。",img:"images/q28.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」の表示です。追い越しのため道路の右側部分にはみ出して通行してはいけません。"},
 /* 29 */ {q:"この標識は、自動車と原動機付自転車の最高速度が時速50キロメートルであることを示している。",img:"images/q29.png",a:false,e:"最高速度が50キロの標識でも、原動機付自転車は、時速30キロメートル（法定速度）を超えてはいけません。"},
 /* 30 */ {q:"この補助標識は、本標識が表示する交通規制の終わりを表している。",img:"images/q30.png",a:true,e:"問題文の通りです。「終わり」の補助標識です。"},
@@ -194,6 +194,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
