--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@ const questions = [
 /* 2 */ {q:"この標識は、自動車はもちろん、原動機自動車や軽車両も通行できない。",img:"images/q2.png",a:true,e:"問題文の通りです。「車両通行止め」の標識」です。歩行者や路面電車は通行できるが、自動車、原動機付自転車、軽車両（自転車など）を含む全ての車両の通行が禁止です。"},
 /* 3 */ {q:"この標識は、車両進入禁止で、標識のある方向からは進入できない。",img:"images/q3.png",a:true,e:"問題文の通りです。「車両進入禁止」の標識です。指定された方向からの車両（自動車、原動機付自転車、軽車両）の進入を禁止する標識です。主に一方通行の出口に設置され、逆走防止の目的があります。"},
 /* 4 */ {q:"この標識のある交差点で右折する原動機付自転車は、右折するところまで進行する間、右折の合図をしなくてもよい。",img:"images/q4.png",a:false,e:"「一般原動機付自転車の右折方法（二段階）」の標識です。二段階右折する原付は、交差点の30ｍ手前から、右に向きを変えるところまで、右折の合図をします。"},
-/* 5 */ {q:"この標識のある場所では、8時から２０時までの間、駐車が禁止されていることを示している。",img:"images/q5.png",a:true,e:"問題文の通りです。「駐車禁止」の標識です。"},
+/* 5 */ {q:"この標識のある場所では、８時から２０時までの間、駐車が禁止されていることを示している。",img:"images/q5.png",a:true,e:"問題文の通りです。「駐車禁止」の標識です。標識内の数字（8-20）は規制が適用される時間を示しています。"},
 /* 6 */ {q:"この標識のある場所では、道路の幅が６メートルなければ駐車してはならないことを示している。",img:"images/q6.png",a:false,e:"これは「駐車余地」の標識です。道路自体の幅が6メートルなければいけない、という意味ではなく。車の右側に６メートルの余地がなければ駐車できないという意味です。"},
-/* 7 */ {q:"この標識のあるところでは、右折することができない",img:"images/q7.png",a:false,e:"これは「車両横断禁止」の標識です。右折はできます。"},
+/* 7 */ {q:"この標識のあるところでは、右折することができない",img:"images/q7.png",a:false,e:"これは「車両横断禁止」の標識です。道路外（右側の店舗や施設）に入るための道路横断を禁止する標識です。交通量が多い場所で事故防止のために設置され、施設へ直接右折して入ることはできませんが、交差点を右折することはできます。"},
 /* 8 */ {q:"この標識のあるところでは、同時に後退も禁止されている。",img:"images/q8.png",a:false,e:"これは「転回禁止」の標識です。後退はできます。"},
 /* 9 */ {q:"この表示は、前方に交差点があることを示している。",img:"images/q9.png",a:false,e:"これは「横断歩道または自転車横断帯あり」の表示です。"},
 /*10 */ {q:"この▽印の表示がある方が、前方の交差する道路より優先道路である。",img:"images/q10.png",a:false,e:"これは「前方優先道路」の表示です。▽印の表示がない方が優先道路です。▽印の表示がある方を通行している車は、交差点の状況に応じて、他の車両や歩行者に注意し、安全な速度と方法で走行します。優先道路を走行するときでも、周囲の状況を確認して、必要に応じて徐行や一時停止をしましょう。"},
@@ -194,6 +194,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
