--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@ const questions = [
 /* 5 */ {q:"この標識のある場所では、８時から２０時までの間、駐車が禁止されていることを示している。",img:"images/q5.png",a:true,e:"問題文の通りです。「駐車禁止」の標識です。標識内の数字（8-20）は規制が適用される時間を示しています。"},
 /* 6 */ {q:"この標識のある場所では、道路の幅が６メートルなければ駐車してはならないことを示している。",img:"images/q6.png",a:false,e:"これは「駐車余地」の標識です。道路自体の幅が6メートルなければいけない、という意味ではなく。車の右側に６メートルの余地がなければ駐車できないという意味です。"},
 /* 7 */ {q:"この標識のあるところでは、右折することができない",img:"images/q7.png",a:false,e:"これは「車両横断禁止」の標識です。道路外（右側の店舗や施設）に入るための道路横断を禁止する標識です。交通量が多い場所で事故防止のために設置され、施設へ直接右折して入ることはできませんが、交差点を右折することはできます。"},
-/* 8 */ {q:"この標識のあるところでは、同時に後退も禁止されている。",img:"images/q8.png",a:false,e:"これは「転回禁止」の標識です。後退はできます。"},
-/* 9 */ {q:"この表示は、前方に交差点があることを示している。",img:"images/q9.png",a:false,e:"これは「横断歩道または自転車横断帯あり」の表示です。"},
+/* 8 */ {q:"この標識のあるところでは、同時に後退も禁止されている。",img:"images/q8.png",a:false,e:"これは「転回禁止」の標識です。歩行者・他車の通行を妨げる危険な場所で、車のUターンを禁止する標識です。後退はできます。"},
+/* 9 */ {q:"この表示は、前方に交差点があることを示している。",img:"images/q9.png",a:false,e:"これは「横断歩道または自転車横断帯あり」の表示です。このマークを見たら、横断歩道に歩行者等が待機している、または渡ろうとしている場合は、必ず手前で一時停止して歩行者等の横断を妨げないようにしなければなりません。"},
 /*10 */ {q:"この▽印の表示がある方が、前方の交差する道路より優先道路である。",img:"images/q10.png",a:false,e:"これは「前方優先道路」の表示です。▽印の表示がない方が優先道路です。▽印の表示がある方を通行している車は、交差点の状況に応じて、他の車両や歩行者に注意し、安全な速度と方法で走行します。優先道路を走行するときでも、周囲の状況を確認して、必要に応じて徐行や一時停止をしましょう。"},
 
 /* 11 */ {q:"この標識のある道路では、普通乗用自動車以外の自動車は通行できない。",img:"images/q11.png",a:false,e:"これは「自動車専用」の標識です。高速自動車国道または自動車専用道路であることを示し、ミニカー、一般原動機付自転車,125cc以下または定格出力1.00kw以下の普通自動二輪車は通行できません。"},
 /* 12 */ {q:"この標識のある道路では、自動二輪車は通行できないが原動機付自転車は通行することができる。",img:"images/q12.png",a:false,e:"これは「二輪の自動車・原動機付き自転車通行止め」の標識です。自動二輪車の他に原動機付自転車も規制の対象になります。"},
 /* 13 */ {q:"この標識のある道路では、運転経歴にかかわらず、大型自動二輪車及び普通自動二輪車での、二人乗り通行を禁止している。",img:"images/q13.png",a:true,e:"問題文の通りです。「大型自動二輪車及び普通自動二輪車二人乗り通行禁止」の標識です。"},
-/* 14 */ {q:"この標識は、路線バス等の優先通行帯を示すもので、路線バスが近づいたときは、ほかの自動車は速やかにその通行帯から出なければならない。",img:"images/q14.png",a:true,e:"問題文の通りです。「路線バス等優先通行帯」の標識です。"},
-/* 15 */ {q:"この標識のある通行帯では、指定された車以外の車（小型特殊自動車、原動機付自転車、軽車両を除く）は左折や工事などでやむを得ない場合のほかは通行することができない。",img:"images/q15.png",a:true,e:"問題文の通りです。「専用通行帯」の標識です。"},
+/* 14 */ {q:"この標識は、路線バス等の優先通行帯を示すもので、路線バスが近づいたときは、ほかの自動車は速やかにその通行帯から出なければならない。",img:"images/q14.png",a:true,e:"問題文の通りです。「路線バス等優先通行帯」の標識です。路線バスやスクールバスなどの通行を優先させるための車線で、一般車両も通行できますが、バスが近づいたら速やかに退避する必要があります。"},
+/* 15 */ {q:"この標識のある通行帯では、指定された車以外の車（小型特殊自動車、原動機付自転車、軽車両を除く）は左折や工事などでやむを得ない場合のほかは通行することができない。",img:"images/q15.png",a:true,e:"問題文の通りです。「専用通行帯」の標識です。路線バスや通学・通園バスなどが優先的に走行するための通行帯です。一般車は原則として通行禁止です。"},
 /* 16 */ {q:"この標識は、歩行車だけの通行のために設けられた道路を示している。",img:"images/q16.png",a:true,e:"問題文の通りです。「歩行者専用道路」の標識です。。"},
 /* 17 */ {q:"この標識のあるところでは、特例特定小型原動機付自転車は通行することができる。",img:"images/q17.png",a:true,e:"問題文の通りです。「普通自転車及び歩行者等専用」の標識です。1.自転車歩行者専用道路を示します。2.特定小型原動機付自転車及び自転車（これらの車両で自転車道を通行してはならないものを除く。）以外の車両は通行できません。3.特例特定小型原動機付自転車と普通自転車が通行できる歩道であることを示しています。"},
 /* 18 */ {q:"この標識は、車が直進や左折することはできるが、午前８時から午後８時までの間、右折することができないことを示している。",img:"images/q18.png",a:true,e:"問題文の通りです。『指定方向外進行禁止」の標識です。  "},
@@ -194,6 +194,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
