--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ const questions = [
 /* 16 */ {q:"この標識は、歩行車だけの通行のために設けられた道路を示している。",img:"images/q16.png",a:true,e:"問題文の通りです。「歩行者専用道路」の標識です。歩行者の安全確保のために車両（軽車両を含む）の通行が禁止されている道路です。"},
 /* 17 */ {q:"この標識のあるところでは、特例特定小型原動機付自転車は通行することができる。",img:"images/q17.png",a:true,e:"問題文の通りです。「普通自転車及び歩行者等専用」の標識です。普通自転車と特定小型原動機付自転車（電動キックボードなど）、そして歩行者のみが通行できる道路や区間を示し、他の車両は禁止され、歩行者が優先される場所です。"},
 /* 18 */ {q:"この標識は、車が直進や左折することはできるが、午前８時から午後８時までの間、右折することができないことを示している。",img:"images/q18.png",a:true,e:"問題文の通りです。『指定方向外進行禁止」の標識です。白矢印で示された方向以外への車両の進行を禁止する標識で、交差点などで矢印の示す方向（右折・左折・直進など）にしか進めないことを意味します。  "},
-/* 19 */ {q:"この標識は、普通乗用自動車だけの通行を禁止している。",img:"images/q19.png",a:false,e:"これは「二輪の自動車以外の自動車通行止め」の標識です。二輪の自動車のみ通行できます。"},
+/* 19 */ {q:"この標識は、普通乗用自動車だけの通行を禁止している。",img:"images/q19.png",a:false,e:"これは「二輪の自動車以外の自動車通行止め」の標識です。バイク（大型二輪・普通二輪・原付）は通行できるが、乗用車やトラックなどの四輪車・三輪車は通行できない標識です。"},
 /* 20 */ {q:"この標識のあるところでは、最大積載量2.000キログラムの貨物自動車は通行してもよい。",img:"images/q20.png",a:true,e:"問題文の通りです。大型貨物自動車と特定中型貨物自動車、大型特殊自動車は通行できません。最大積載量2.000キログラムの貨物自動車は準中型自動車のため通行できます。"},
 /* 21 */ {q:"この標識のあるところでは、車両総重量3.000キログラムの貨物自動車は通行できないことを示している。",img:"images/q21.png",a:false,e:"「特定の最大積載量以上の貨物自動車等通行止め」の標識です。この場合最大積載量3.000キログラム以上の貨物自動車と大型特殊自動車は通行できません。車両総重量と最大積載量を混同しないよう、十分に注意しましょう。"},
 /* 22 */ {q:"この表示は、立ち入り禁止部分であることを示している。",img:"images/q22.png",a:true,e:"問題文の通りです。車はこの表示の中に入ってはいけません。"},
@@ -194,6 +194,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
