--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ const questions = [
 /* 21 */ {q:"この標識のあるところでは、車両総重量3.000キログラムの貨物自動車は通行できないことを示している。",img:"images/q21.png",a:false,e:"「特定の最大積載量以上の貨物自動車等通行止め」の標識です。この場合最大積載量3.000キログラム以上の貨物自動車と大型特殊自動車は通行できません。車両総重量と最大積載量を混同しないよう、十分に注意しましょう。"},
 /* 22 */ {q:"この表示は、立ち入り禁止部分であることを示している。",img:"images/q22.png",a:true,e:"問題文の通りです。車はこの表示の中に入ってはいけません。"},
 /* 23 */ {q:"この表示は、停止禁止部分であることを示している。",img:"images/q23.png",a:true,e:"問題文の通りです。前方の状況により、この表示の中で停止するおそれがあるときは、この中に入ってはいけません。"},
-/* 24 */ {q:"この白の二本線で示された路側帯は、車はその中に入って駐車をしてもよい。",img:"images/q24.png",a:false,e:"これは「歩行者専用路側帯」です。車の駐停車は禁止されています。"},
+/* 24 */ {q:"この白の二本線で示された路側帯は、車はその中に入って駐車をしてもよい。",img:"images/q24.png",a:false,e:"これは「歩行者専用路側帯」です。歩道のない道路などで、白い実線が2本引かれている部分のことで、歩行者のみが通行でき、自転車を含む全ての車両（自動車、バイク、原付など）の通行や駐停車が禁止されています。"},
 /* 25 */ {q:"この表示の路側帯に入って、駐車や停車をすることはできない。",img:"images/q25.png",a:true,e:"問題文の通りです。「駐停車禁止路側帯」です。"},
 /* 26 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q26.png",a:true,e:"問題文の通りです。「その他の危険」ありの標識です。"},
 /* 27 */ {q:"この標識は、この先で左から道路が合流してくることを示している。",img:"images/q27.png",a:true,e:"問題文の通りです。「合流交通あり」の標識です。"},
@@ -194,6 +194,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
