--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ const questions = [
 /* 22 */ {q:"この表示は、立ち入り禁止部分であることを示している。",img:"images/q22.png",a:true,e:"問題文の通りです。車はこの表示の中に入ってはいけません。"},
 /* 23 */ {q:"この表示は、停止禁止部分であることを示している。",img:"images/q23.png",a:true,e:"問題文の通りです。前方の状況により、この表示の中で停止するおそれがあるときは、この中に入ってはいけません。"},
 /* 24 */ {q:"この白の二本線で示された路側帯は、車はその中に入って駐車をしてもよい。",img:"images/q24.png",a:false,e:"これは「歩行者専用路側帯」です。歩道のない道路などで、白い実線が2本引かれている部分のことで、歩行者のみが通行でき、自転車を含む全ての車両（自動車、バイク、原付など）の通行や駐停車が禁止されています。"},
-/* 25 */ {q:"この表示の路側帯に入って、駐車や停車をすることはできない。",img:"images/q25.png",a:true,e:"問題文の通りです。「駐停車禁止路側帯」です。"},
+/* 25 */ {q:"この表示の路側帯に入って、駐車や停車をすることはできない。",img:"images/q25.png",a:true,e:"問題文の通りです。「駐停車禁止路側帯」です。白の実線と白の破線で区画された道路標示で、自動車や原付がこのエリアに入って駐車・停車することが禁じられた場所です。"},
 /* 26 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q26.png",a:true,e:"問題文の通りです。「その他の危険」ありの標識です。"},
 /* 27 */ {q:"この標識は、この先で左から道路が合流してくることを示している。",img:"images/q27.png",a:true,e:"問題文の通りです。「合流交通あり」の標識です。"},
 /* 28 */ {q:"この表示は、道路中央寄り右側部分にはみ出して追い越すときは、対向車に注意しなければならないことを示している。",img:"images/q28.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」の表示です。追い越しのため道路の右側部分にはみ出して通行してはいけません。"},
@@ -194,6 +194,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
