--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@ const questions = [
 /* 23 */ {q:"この表示は、停止禁止部分であることを示している。",img:"images/q23.png",a:true,e:"問題文の通りです。前方の状況により、この表示の中で停止するおそれがあるときは、この中に入ってはいけません。"},
 /* 24 */ {q:"この白の二本線で示された路側帯は、車はその中に入って駐車をしてもよい。",img:"images/q24.png",a:false,e:"これは「歩行者専用路側帯」です。歩道のない道路などで、白い実線が2本引かれている部分のことで、歩行者のみが通行でき、自転車を含む全ての車両（自動車、バイク、原付など）の通行や駐停車が禁止されています。"},
 /* 25 */ {q:"この表示の路側帯に入って、駐車や停車をすることはできない。",img:"images/q25.png",a:true,e:"問題文の通りです。「駐停車禁止路側帯」です。白の実線と白の破線で区画された道路標示で、自動車や原付がこのエリアに入って駐車・停車することが禁じられた場所です。"},
-/* 26 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q26.png",a:true,e:"問題文の通りです。「その他の危険」ありの標識です。"},
-/* 27 */ {q:"この標識は、この先で左から道路が合流してくることを示している。",img:"images/q27.png",a:true,e:"問題文の通りです。「合流交通あり」の標識です。"},
-/* 28 */ {q:"この表示は、道路中央寄り右側部分にはみ出して追い越すときは、対向車に注意しなければならないことを示している。",img:"images/q28.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」の表示です。追い越しのため道路の右側部分にはみ出して通行してはいけません。"},
-/* 29 */ {q:"この標識は、自動車と原動機付自転車の最高速度が時速50キロメートルであることを示している。",img:"images/q29.png",a:false,e:"最高速度が50キロの標識でも、原動機付自転車は、時速30キロメートル（法定速度）を超えてはいけません。"},
-/* 30 */ {q:"この補助標識は、本標識が表示する交通規制の終わりを表している。",img:"images/q30.png",a:true,e:"問題文の通りです。「終わり」の補助標識です。"},
+/* 26 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q26.png",a:true,e:"問題文の通りです。「その他の危険」ありの標識です。これ以外の警戒標識では表示（表現）できない等の場合において、この先で車両の運転上注意が必要であることを指します。必要に応じて「補助標識」との組み合わせにより設置されています。"},
+/* 27 */ {q:"この標識は、この先で左から道路が合流してくることを示している。",img:"images/q27.png",a:true,e:"問題文の通りです。「合流交通あり」の標識です。前方の側道から車が本線に合流してくるため注意を促すものです "},
+/* 28 */ {q:"この表示は、道路中央寄り右側部分にはみ出して追い越すときは、対向車に注意しなければならないことを示している。",img:"images/q28.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」の表示です。前車を追い越す際に、道路のセンターラインを越えて対向車線側（右側部分）にはみ出すことを禁止する表示です。"},
+/* 29 */ {q:"この標識は、自動車と原動機付自転車の最高速度が時速50キロメートルであることを示している。",img:"images/q29.png",a:false,e:"その区間の「上限速度」を示します。 最高速度が50キロの標識でも、原動機付自転車は、時速30キロメートル（法定速度）を超えてはいけません。"},
+/* 30 */ {q:"この補助標識は、本標識が表示する交通規制の終わりを表している。",img:"images/q30.png",a:true,e:"問題文の通りです。「終わり」の補助標識です。規制区間の終わり”を示す補助標識で、標識の意味を補足するものです。"},
 /* 31 */ {q:"これは、左折可を示す標示板である。",img:"images/q31.png",a:false,e:"「一方通行」の標識です。車は矢印の方向の示す反対方向には通行できません。"},
 /* 32 */ {q:"この標識があるときは、前方の信号が赤や黄であっても、周りの交通に注意しながら左折することができる。",img:"images/q32.png",a:true,e:"問題文の通りです。「左折可」の表示板です。"},
 /* 33 */ {q:"この標識は、車は道路の右側部分にはみ出して追い越すことができる。",img:"images/q33.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」の標識です。車は、道路の右側部分にはみ出して追い越しをしてはいけません。（はみ出さなければ追い越しできます。）"},
 /* 34 */ {q:"この標識は、車は、一般原動機付自転車を追い越すため進路を変えたり、その横を通り過ぎたりしてはならない。",img:"images/q34.png",a:true,e:"問題文の通りです。「追い越し禁止」の標識です。すべての追い越し行為が禁止されています。"},
-/* 35 */ {q:"この標識は、警音器を鳴らさなければならないことを示している。",img:"images/q35.png",a:true,e:"問題文の通りです。「警笛鳴らせ」の標識です。"},
+/* 35 */ {q:"この標識は、警音器を鳴らさなければならないことを示している。",img:"images/q35.png",a:true,e:"問題文の通りです。「警笛鳴らせ」の標識です。見通しの悪いカーブ、山間部の曲がり角、上り坂の頂上付近など、事故の危険がある場所に設置されています。この標識がある場所では、車は必ずクラクションを鳴らし、対向車や歩行者に存在を知らせなければなりません。"},
 /* 36 */ {q:"この標識がある区間内の見通しがきかない交差点、曲がり角、上り坂の頂上付近では、警音器を鳴らす必要がある。",img:"images/q36.png",a:true,e:"問題文の通りです。「警笛区間」の標識です。「警笛区間」では、その区間内のうち、左右の見通しがきかない交差点、見通しのきかない道路の曲がり角、見通しのきかない上り坂の頂上を通行するときに、警音器を鳴らすことが強制されます。しかし、それ以外の場所では、区間内であっても警音器を使用してはいけません。"},
 /* 37 */ {q:"この標識は、すべりやすいので注意しなければならないことを示している。",img:"images/q37.png",a:false,e:"「右（左）つづら折りあり」の標識です。山道などでよく見られるような、右方向（左方向）への急なカーブが連続して続く「ジグザグ道」になっていることを示す標識です。この標識を見たら、連続するカーブに備えて速度を落とし、慎重にハンドル操作をする必要があります。"},
 /* 38 */ {q:"これは高齢者マークであり、７０歳以上の高齢運転者は、普通自動車を運転する場合、その車の前と後ろの定められた位置につけるようにした方がよい。",img:"images/q38.png",a:true,e:"問題文の通りです。「高齢者マーク」です。"},
@@ -194,6 +194,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
