--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@ const questions = [
 /* 41 */ {q:"この標識は、駐車禁止を示している。",img:"images/q41.png",a:false,e:"「駐車可」の標識です。車は、駐車することができます。"},
 /* 42 */ {q:"この標識は、標章の交付を受けた高齢運転者等が運転する普通自動車が標章を掲示することで停車できることを示している。",img:"images/q42.png",a:true,e:"問題文の通りです。「高齢運転者等標章自動車停車可」標識です。"},
 /* 43 */ {q:"この標識は、原動機付自転車の右折が禁止されていることを示している。",img:"images/q43.png",a:false,e:"右折禁止では無く、原動機付自転車の二段階右折が禁止されていることを示しています。"},
-/* 44 */ {q:"この標識のある場所で、補助標識による指定が無い場合には、原動機付自転車も軌道敷内を通行することができる。",img:"images/q44.png",a:false,e:"標識により軌道敷内を通行できるのは自動車のみです。"},
-/* 45 */ {q:"交差点の手前にこの標識がある場合は、自分の通行している道路が「優先道路」であることを示している。",img:"images/q45.png",a:true,e:"問題文の通りです。"},
-/* 46 */ {q:"この標識は、この先の道路の道幅が狭くなっていることを示している。",img:"images/q46.png",a:true,e:"問題文の通りです。「幅員減少」です。"},
-/* 47 */ {q:"この表示は、その場所が「転回禁止」の終わりであることを示している。",img:"images/q47.png",a:false,e:"「転回禁止」です。"},
+/* 44 */ {q:"この標識のある場所で、補助標識による指定が無い場合には、原動機付自転車も軌道敷内を通行することができる。",img:"images/q44.png",a:false,e:"「軌道敷内通行可」の標識です。標識により軌道敷内を通行できるのは自動車のみです。"},
+/* 45 */ {q:"交差点の手前にこの標識がある場合は、自分の通行している道路が「優先道路」であることを示している。",img:"images/q45.png",a:true,e:"問題文の通りです。「優先道路」の標識です。優先道路を通行している間は、見通しの悪い交差点であっても「徐行」の義務はありません。（安全確認は必要です。）、 非優先道路（脇道など）から来る車は、優先道路を通行する車の進行を妨げてはいけません。"},
+/* 46 */ {q:"この標識は、この先の道路の道幅が狭くなっていることを示している。",img:"images/q46.png",a:true,e:"問題文の通りです。「幅員減少」の標識です。"},
+/* 47 */ {q:"この表示は、その場所が「転回禁止」の終わりであることを示している。",img:"images/q47.png",a:false,e:"「転回禁止」の標示です。転回禁止の終わりではありません。"},
 /* 48 */ {q:"この表示は、この先50メートルに踏切または交差点があることを示している。",img:"images/q48.png",a:false,e:"「規制速度時速５０キロメートルの終わり」です。"},
-/* 49 */ {q:"この表示は、駐車禁止を示している。",img:"images/q49.png",a:false,e:"「駐停車禁止」です。"},
-/* 50 */ {q:"この表示は、駐停車禁止を示している。",img:"images/q50.png",a:true,e:"「駐車禁止」です。"},
+/* 49 */ {q:"この表示は、駐車禁止を示している。",img:"images/q49.png",a:false,e:"「駐停車禁止」の標示です。"},
+/* 50 */ {q:"この表示は、駐停車禁止を示している。",img:"images/q50.png",a:true,e:"「駐車禁止」の標示です。"},
 ];
 
 function showQuestion(){
@@ -194,6 +194,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
